[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/MainMenu.tres" type="DynamicFont" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 184.0
margin_top = 24.0
margin_right = 849.0
margin_bottom = 586.0

[node name="btnStartGame" type="Button" parent="Panel"]
margin_left = 114.116
margin_top = 12.07
margin_right = 547.116
margin_bottom = 111.07
custom_fonts/font = ExtResource( 2 )
text = "START GAME"
flat = true

[node name="btnOptions" type="Button" parent="Panel"]
margin_left = 110.824
margin_top = 87.782
margin_right = 543.824
margin_bottom = 186.782
custom_fonts/font = ExtResource( 2 )
text = "Options"
flat = true

[node name="btnLeaderboard" type="Button" parent="Panel"]
margin_left = 103.144
margin_top = 162.396
margin_right = 536.144
margin_bottom = 261.396
custom_fonts/font = ExtResource( 2 )
text = "Leaderboard"
flat = true

[node name="btnCredits" type="Button" parent="Panel"]
margin_left = 107.533
margin_top = 317.112
margin_right = 540.533
margin_bottom = 416.112
custom_fonts/font = ExtResource( 2 )
text = "Credits"
flat = true

[node name="btnQuit" type="Button" parent="Panel"]
margin_left = 111.922
margin_top = 450.979
margin_right = 544.922
margin_bottom = 549.979
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true

[node name="btnAbout" type="Button" parent="Panel"]
margin_left = 235.0
margin_top = 251.0
margin_right = 412.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 2 )
text = "About"
flat = true
